[package]
name = "expression_engine_yew_app"
version = "0.1.0"
edition = "2021"

[dependencies]
expression_engine = { path = "../expression_engine" }
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
implicit-clone = { version = "0.5", features = ["map"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Event",
    "EventTarget",
    "InputEvent",
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
] }
